Fixing legacy GAuth for APK
